# templates

./: .gitignore  flake.nix
rp2040-c/: .gitignore  .justfile  CMakeLists.txt  flake.nix
rp2040-c/src/: main.c
